[gd_scene load_steps=8 format=3 uid="uid://cq0ptjud2gmq0"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_70ddf"]
[ext_resource type="PackedScene" uid="uid://c1ob2cod14dqi" path="res://scenes/player.tscn" id="1_u2gxc"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="2_sqs25"]
[ext_resource type="PackedScene" uid="uid://x5jbnesb1myy" path="res://scenes/shape_lower_boundary.tscn" id="3_r1opo"]

[sub_resource type="LabelSettings" id="LabelSettings_fjtu2"]
font_size = 30

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_vvgpd"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_k4ssv"]

[node name="Game" type="Node2D"]
script = ExtResource("1_70ddf")

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_sqs25")

[node name="HighScoreLabel" type="Label" parent="GameManager"]
offset_left = 476.0
offset_top = -298.0
offset_right = 575.0
offset_bottom = -275.0
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="GameManager"]
offset_left = -20.0
offset_top = -299.0
offset_right = 20.0
offset_bottom = -276.0
horizontal_alignment = 1

[node name="RestartLabel" type="Label" parent="GameManager"]
offset_left = -256.0
offset_top = -44.0
offset_right = 256.0
offset_bottom = 44.0
label_settings = SubResource("LabelSettings_fjtu2")
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5000.0
offset_top = -5000.0
offset_right = 5000.0
offset_bottom = 5000.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.168627, 0.0588235, 0.329412, 1)
metadata/_edit_use_anchors_ = true

[node name="Player" parent="." instance=ExtResource("1_u2gxc")]
position = Vector2(3, 235)
collision_mask = 6

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(2, 2)

[node name="Labels" type="Node" parent="."]

[node name="HighScoreTextLabel" type="Label" parent="Labels"]
offset_left = 475.0
offset_top = -323.0
offset_right = 571.0
offset_bottom = -300.0
text = "HIGH SCORE"

[node name="ScoreTextLabel" type="Label" parent="Labels"]
offset_left = -25.0
offset_top = -323.0
offset_right = 26.0
offset_bottom = -300.0
text = "SCORE"
horizontal_alignment = 1

[node name="Boundaries" type="Node" parent="."]

[node name="LeftWorldBoundary" type="StaticBody2D" parent="Boundaries"]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/LeftWorldBoundary"]
position = Vector2(-572, -1)
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_vvgpd")

[node name="ShapeLowerBoundary" parent="Boundaries" instance=ExtResource("3_r1opo")]
position = Vector2(34, 373)

[node name="RightWorldBoundary" type="StaticBody2D" parent="Boundaries"]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/RightWorldBoundary"]
position = Vector2(573, 0)
rotation = -1.5708
shape = SubResource("WorldBoundaryShape2D_k4ssv")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_shape_entered" from="Boundaries/ShapeLowerBoundary" to="Player" method="_on_shape_lower_boundary_area_shape_entered"]
